# meeting-room-api

api/: app.py  main.py  pyproject.toml
api/sql_app/: crud.py  database.py  main.py  models.py  schemas.py
fast_api_basic/: main.py  pyproject.toml  test_api.py  type_hints.py
streamlit_basic/: app.py  pyproject.toml
